Homepage card fix for dark mode

--- a/src/components/HomepageCtas/styles.module.css
+++ b/src/components/HomepageCtas/styles.module.css
@@ -24,19 +24,21 @@
 }
 
 .card {
-  background-color: #f9f9f9;
   border-radius: 7px;
   padding: 15px;
   width: 40%;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 4px 0 var(--ifm-color-emphasis-100);
   margin-bottom: 10px;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
+  background: var(--ifm-card-background-color);
+  border: 1px solid var(--ifm-color-emphasis-200);
 }
 
 .card:hover {
-  background-color: #d9d9d9;
   transform: scale(1.02);
   text-decoration: none;
+  box-shadow: 0 2px 6px 0 var(--ifm-color-emphasis-200);
+  border-color: var(--ifm-color-emphasis-300);
 }
 
 .card h3 {
@@ -44,11 +46,12 @@
   margin: 0;
   font-weight: bold;
   font-size: 1.2rem;
+  color: var(--ifm-heading-color);
 }
 
 .card p {
   margin-top: 5px;
-  color: gray;
+  color: var(--ifm-color-emphasis-600);
   font-size: 0.9rem;
 }
 
